name:                tabletop-client
version:             0.1.0
-- synopsis:
-- description:
homepage:            https://github.com/taksuyu/tabletop-client#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Borden
maintainer:          michael@quiet.space
copyright:           2017 Michael Borden
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable site
  main-is:             Site.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , binary
                     , bytestring
                     , heist
                     , lens
                     , shake
                     -- , text
